# MyMagnumGraphicsTemplate

./: .gitignore  CMakeLists.txt
Source/: MyApplication.cpp  MyApplication.h
Source/Application/: GLApplication.cpp  GLApplication.h  ImGuiApplication.h  PickableApplication.cpp  PickableApplication.h
Source/Camera/: ArcBall.h  ArcBallCamera.h
Source/DrawableObjects/: FlatShadeObject.h  Grid.cpp  Grid.h  PickableObject.cpp  PickableObject.h
Source/SOP/: ADATObject.h  AIKit.h  AIModel.h  AIRCC.h  AISOP.h  AITag.h  AudioInformation.h  Group.h  ItemCheck.h  LogicNode.h  MoveTo.h  Procedure.h  SUPER.h  Step.cpp  Step.h  StyleInformation.h  VoiceCommand.h
